--- a/404.html
+++ b/404.html
@@ -1,17 +1,17 @@
 <!doctype html><html lang=en class="js csstransforms3d">
 <head>
 <meta charset=utf-8> <meta name=description content>
-<link rel=icon href=/images/favicon.png type=image/png>
-<title>404 Page not found</title><link href=/css/nucleus.css?1646338267 rel=stylesheet>
-<link href=/css/fontawesome-all.min.css?1646338267 rel=stylesheet>
-<link href=/css/hybrid.css?1646338267 rel=stylesheet>
-<link href=/css/featherlight.min.css?1646338267 rel=stylesheet>
-<link href=/css/perfect-scrollbar.min.css?1646338267 rel=stylesheet>
-<link href=/css/theme.css?1646338267 rel=stylesheet>
-<link href=/css/hugo-theme.css?1646338267 rel=stylesheet>
+<link rel=icon href=/tw/images/favicon.png type=image/png>
+<title>404 Page not found</title><link href=/tw/css/nucleus.css?1646338565 rel=stylesheet>
+<link href=/tw/css/fontawesome-all.min.css?1646338565 rel=stylesheet>
+<link href=/tw/css/hybrid.css?1646338565 rel=stylesheet>
+<link href=/tw/css/featherlight.min.css?1646338565 rel=stylesheet>
+<link href=/tw/css/perfect-scrollbar.min.css?1646338565 rel=stylesheet>
+<link href=/tw/css/theme.css?1646338565 rel=stylesheet>
+<link href=/tw/css/hugo-theme.css?1646338565 rel=stylesheet>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}p,li,ul{text-align:center}ul{list-style-type:none}</style></head><body data-url=/>
 <section id=body style=margin-left:0>
 <div id=overlay></div><div id=chapter>
 <div id=body-inner>
 <h1>Error</h1><p>
-</p><p>Woops. Looks like this page doesn't exist ¯\_(ツ)_/¯.</p><p></p><p><a href=/>Go to homepage</a></p><p><img src=/images/gopher-404.jpg style=width:50% alt="Page not found!"></p></div></div></section></body></html>
+</p><p>Woops. Looks like this page doesn't exist ¯\_(ツ)_/¯.</p><p></p><p><a href=/tw/>Go to homepage</a></p><p><img src=/tw/images/gopher-404.jpg style=width:50% alt="Page not found!"></p></div></div></section></body></html>
