--- a/404.html
+++ b/404.html
@@ -1,14 +1,16 @@
 <!doctype html><html lang=en class="js csstransforms3d">
 <head>
-<meta charset=utf-8> <meta name=description content>
+<meta charset=utf-8> <meta name=description content="TW">
+<meta name=author content="Micu Matei-Marius">
 <link rel=icon href=/tw/images/favicon.png type=image/png>
-<title>404 Page not found</title><link href=/tw/css/nucleus.css?1646338565 rel=stylesheet>
-<link href=/tw/css/fontawesome-all.min.css?1646338565 rel=stylesheet>
-<link href=/tw/css/hybrid.css?1646338565 rel=stylesheet>
-<link href=/tw/css/featherlight.min.css?1646338565 rel=stylesheet>
-<link href=/tw/css/perfect-scrollbar.min.css?1646338565 rel=stylesheet>
-<link href=/tw/css/theme.css?1646338565 rel=stylesheet>
-<link href=/tw/css/hugo-theme.css?1646338565 rel=stylesheet>
+<title>404 Page not found</title><link href=/tw/css/nucleus.css?1646345836 rel=stylesheet>
+<link href=/tw/css/fontawesome-all.min.css?1646345836 rel=stylesheet>
+<link href=/tw/css/hybrid.css?1646345836 rel=stylesheet>
+<link href=/tw/css/featherlight.min.css?1646345836 rel=stylesheet>
+<link href=/tw/css/perfect-scrollbar.min.css?1646345836 rel=stylesheet>
+<link href=/tw/css/theme.css?1646345836 rel=stylesheet>
+<link href=/tw/css/hugo-theme.css?1646345836 rel=stylesheet>
+<link href=/tw/css/theme-blue.css?1646345836 rel=stylesheet>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}p,li,ul{text-align:center}ul{list-style-type:none}</style></head><body data-url=/>
 <section id=body style=margin-left:0>
 <div id=overlay></div><div id=chapter>
