--- a/laboratoare/01-html/index.html
+++ b/laboratoare/01-html/index.html
@@ -6,7 +6,7 @@
 <meta name=description content="TW">
 <meta name=author content="Micu Matei-Marius">
 <link rel=icon href=/tw/images/favicon.png type=image/png>
-<title>Tags :: TW</title><link href=/tw/css/nucleus.css?1646345836 rel=stylesheet>
+<title>01 - HTML :: TW</title><link href=/tw/css/nucleus.css?1646345836 rel=stylesheet>
 <link href=/tw/css/fontawesome-all.min.css?1646345836 rel=stylesheet>
 <link href=/tw/css/hybrid.css?1646345836 rel=stylesheet>
 <link href=/tw/css/featherlight.min.css?1646345836 rel=stylesheet>
@@ -18,7 +18,7 @@
 <link href=/tw/css/hugo-theme.css?1646345836 rel=stylesheet>
 <link href=/tw/css/theme-blue.css?1646345836 rel=stylesheet>
 <script src=/tw/js/jquery-3.3.1.min.js?1646345836></script>
-<style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/tags/>
+<style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/01-html/>
 <nav id=sidebar class=showVisitedLinks>
 <div id=header-wrapper>
 <div id=header>
@@ -39,13 +39,16 @@ Tehnologii Web
 <a class=padding href=/><i class="fas fa-home"></i> Home</a>
 </li></ul></section><div class=highlightable>
 <ul class=topics>
-<li data-nav-id=/tw/laboratoare/ title=Laboratoare class=dd-item>
+<li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
+parent">
 <a href=/tw/laboratoare/>
 Laboratoare
 <i class="fas fa-check read-icon"></i>
 </a>
 <ul>
-<li data-nav-id=/tw/laboratoare/01-html/ title="01 - HTML" class=dd-item>
+<li data-nav-id=/tw/laboratoare/01-html/ title="01 - HTML" class="dd-item
+parent
+active">
 <a href=/tw/laboratoare/01-html/>
 01 - HTML
 <i class="fas fa-check read-icon"></i>
@@ -74,7 +77,12 @@ Lista Proiecte
 <div id=overlay></div><div class="padding highlightable">
 <div>
 <div id=top-bar>
-<div id=breadcrumbs itemscope itemtype=http://data-vocabulary.org/Breadcrumb>
+<div id=top-github-link>
+<a class=github-link title="Edit this page" href=https://github.com/mateimicu/tw/content/laboratoare/01-html/_index.md target=blank>
+<i class="fas fa-code-branch"></i>
+<span id=top-github-link-text>Edit this page</span>
+</a>
+</div><div id=breadcrumbs itemscope itemtype=http://data-vocabulary.org/Breadcrumb>
 <span id=sidebar-toggle-span>
 <a href=# id=sidebar-toggle data-sidebar-toggle>
 <i class="fas fa-bars"></i>
@@ -82,19 +90,37 @@ Lista Proiecte
 </span>
 <span id=toc-menu><i class="fas fa-list-alt"></i></span>
 <span class=links>
-<a href=/tw/></a> > Tags
+<a href=/tw/></a> > <a href=/tw/laboratoare/>Laboratoare</a> > 01 - HTML
 </span>
 </div><div class=progress>
 <div class=wrapper>
-</div></div></div></div><div id=head-tags>
+<nav id=TableOfContents>
+<ul>
+<li>
+<ul>
+<li><a href=#informatii-utile>Informatii Utile</a></li><li><a href=#exercitii>Exercitii</a></li></ul></li></ul></nav></div></div></div></div><div id=head-tags>
 </div><div id=body-inner>
 <h1>
-tag ::
-Tags
-</h1><ul>
-</ul><footer class=footline>
+01 - HTML
+</h1><p><a href=prezentare_01.pdf>Prezentare Laboratoar</a></p><h3 id=informatii-utile>Informatii Utile</h3><p>Tools:</p><ul>
+<li><a href=https://jsfiddle.net/>JSFiddle</a></li><li><a href=https://code.visualstudio.com/>VisualStudioCode</a></li></ul><p>Documentatie:</p><ul>
+<li><a href=https://www.w3schools.com/html/>W3schools HTML</a></li><li><a href=https://developer.mozilla.org/en-US/docs/Web/HTML>MDN Web Docs HTML</a></li><li><a href=http://html5doctor.com/element-index>HTML5 Element Index</a></li><li><a href=http://diveinto.html5doctor.com/table-of-contents.html#introduction>Dive Into HTML5</a></li><li><a href=https://github.com/diegocard/awesome-html5#readme>Awesome HTML</a></li><li><a href=https://eager.io/blog/the-history-of-the-url-path-fragment-query-auth/>The History of the URL: Path, Fragment, Query, and Auth</a></li><li><a href=https://validator.w3.org>Validator HTML</a></li></ul><p>Exercitii de antrenament:</p><ul>
+<li><a href=https://www.w3schools.com/html/exercise.asp>W3school Exercises</a></li></ul><h3 id=exercitii>Exercitii</h3><p>Replicati urmatoarele imagini folosing HTML</p><h4 id=1-formular>1. Formular</h4><p><img src=lab_01_exercitiu_form.png alt="Formular in HTML">
+<a href>Rezolvare</a></p><h4 id=2-tabel>2. Tabel</h4><p>Puteti adauga urmatoare bucata de CSS la inceputul pagini</p><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-css data-lang=css><span style=display:flex><span><span style=color:#f92672>&lt;</span><span style=color:#f92672>style</span><span style=color:#f92672>&gt;</span>
+</span></span><span style=display:flex><span>  <span style=color:#f92672>table</span><span style=color:#f92672>,</span>
+</span></span><span style=display:flex><span>  <span style=color:#f92672>th</span><span style=color:#f92672>,</span>
+</span></span><span style=display:flex><span>  <span style=color:#f92672>td</span> {
+</span></span><span style=display:flex><span>    <span style=color:#66d9ef>border</span>: <span style=color:#ae81ff>1</span><span style=color:#66d9ef>px</span> <span style=color:#66d9ef>solid</span> <span style=color:#66d9ef>black</span>;
+</span></span><span style=display:flex><span>    <span style=color:#66d9ef>border-collapse</span>: <span style=color:#66d9ef>collapse</span>;
+</span></span><span style=display:flex><span>  }
+</span></span><span style=display:flex><span>
+</span></span><span style=display:flex><span><span style=color:#f92672>&lt;/</span><span style=color:#f92672>style</span><span style=color:#f92672>&gt;</span>
+</span></span></code></pre></div><p><img src=lab_02_exercitiu_tabel.png alt="Tabel in HTML">
+<a href>Rezolvare</a></p><h4 id=3-puppy>3. Puppy</h4><p><img src=lab_03_exercitiu_puppy.png alt="Imagine in PHP">
+<a href>Rezolvare</a></p><footer class=footline>
 </footer></div></div><div id=navigation>
-<a class="nav nav-next" href=/tw/laboratoare/ title=Laboratoare style=margin-right:0><i class="fa fa-chevron-right"></i></a>
+<a class="nav nav-prev" href=/tw/laboratoare/ title=Laboratoare> <i class="fa fa-chevron-left"></i></a>
+<a class="nav nav-next" href=/tw/laboratoare/aux-01-html/ title="a01 - HTML" style=margin-right:0><i class="fa fa-chevron-right"></i></a>
 </div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
 <div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646345836></script>
 <script src=/tw/js/perfect-scrollbar.min.js?1646345836></script>
