--- a/laboratoare/aux-01-html/index.html
+++ b/laboratoare/aux-01-html/index.html
@@ -6,7 +6,7 @@
 <meta name=description content="TW">
 <meta name=author content="Micu Matei-Marius">
 <link rel=icon href=/tw/images/favicon.png type=image/png>
-<title>Tags :: TW</title><link href=/tw/css/nucleus.css?1646345836 rel=stylesheet>
+<title>a01 - HTML :: TW</title><link href=/tw/css/nucleus.css?1646345836 rel=stylesheet>
 <link href=/tw/css/fontawesome-all.min.css?1646345836 rel=stylesheet>
 <link href=/tw/css/hybrid.css?1646345836 rel=stylesheet>
 <link href=/tw/css/featherlight.min.css?1646345836 rel=stylesheet>
@@ -18,7 +18,7 @@
 <link href=/tw/css/hugo-theme.css?1646345836 rel=stylesheet>
 <link href=/tw/css/theme-blue.css?1646345836 rel=stylesheet>
 <script src=/tw/js/jquery-3.3.1.min.js?1646345836></script>
-<style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/tags/>
+<style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/aux-01-html/>
 <nav id=sidebar class=showVisitedLinks>
 <div id=header-wrapper>
 <div id=header>
@@ -39,7 +39,8 @@ Tehnologii Web
 <a class=padding href=/><i class="fas fa-home"></i> Home</a>
 </li></ul></section><div class=highlightable>
 <ul class=topics>
-<li data-nav-id=/tw/laboratoare/ title=Laboratoare class=dd-item>
+<li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
+parent">
 <a href=/tw/laboratoare/>
 Laboratoare
 <i class="fas fa-check read-icon"></i>
@@ -50,7 +51,7 @@ Laboratoare
 01 - HTML
 <i class="fas fa-check read-icon"></i>
 </a>
-</li><li data-nav-id=/tw/laboratoare/aux-01-html/ title="a01 - HTML" class=dd-item>
+</li><li data-nav-id=/tw/laboratoare/aux-01-html/ title="a01 - HTML" class="dd-item active">
 <a href=/tw/laboratoare/aux-01-html/>
 a01 - HTML
 <i class="fas fa-check read-icon"></i>
@@ -74,7 +75,12 @@ Lista Proiecte
 <div id=overlay></div><div class="padding highlightable">
 <div>
 <div id=top-bar>
-<div id=breadcrumbs itemscope itemtype=http://data-vocabulary.org/Breadcrumb>
+<div id=top-github-link>
+<a class=github-link title="Edit this page" href=https://github.com/mateimicu/tw/content/laboratoare/aux-01-html.md target=blank>
+<i class="fas fa-code-branch"></i>
+<span id=top-github-link-text>Edit this page</span>
+</a>
+</div><div id=breadcrumbs itemscope itemtype=http://data-vocabulary.org/Breadcrumb>
 <span id=sidebar-toggle-span>
 <a href=# id=sidebar-toggle data-sidebar-toggle>
 <i class="fas fa-bars"></i>
@@ -82,19 +88,23 @@ Lista Proiecte
 </span>
 <span id=toc-menu><i class="fas fa-list-alt"></i></span>
 <span class=links>
-<a href=/tw/></a> > Tags
+<a href=/tw/></a> > <a href=/tw/laboratoare/>Laboratoare</a> > a01 - HTML
 </span>
 </div><div class=progress>
 <div class=wrapper>
-</div></div></div></div><div id=head-tags>
+<nav id=TableOfContents>
+<ul>
+<li>
+<ul>
+<li><a href=#exercitii>Exercitii</a></li><li><a href=#informatii-utile>Informatii Utile</a></li></ul></li></ul></nav></div></div></div></div><div id=head-tags>
 </div><div id=body-inner>
 <h1>
-tag ::
-Tags
-</h1><ul>
-</ul><footer class=footline>
+a01 - HTML
+</h1><p><a href="https://docs.google.com/presentation/d/1aFuMF7VAugC5bqIh1sL1PyKH_7eVYkMrAQxIMttYIr8/edit?usp=sharing">Prezentare Laboratoar</a></p><h3 id=exercitii>Exercitii</h3><p>Replicati urmatoarele imagini folosing HTML</p><h4 id=1-formular>1. Formular</h4><p><img src=lab_01_exercitiu_form.png alt="Formular in HTML">
+<a href>Rezolvare</a></p><h4 id=2-tabel>2. Tabel</h4><p><a href>Rezolvare</a></p><h4 id=3-puppy>3. Puppy</h4><p><a href>Rezolvare</a></p><h3 id=informatii-utile>Informatii Utile</h3><footer class=footline>
 </footer></div></div><div id=navigation>
-<a class="nav nav-next" href=/tw/laboratoare/ title=Laboratoare style=margin-right:0><i class="fa fa-chevron-right"></i></a>
+<a class="nav nav-prev" href=/tw/laboratoare/01-html/ title="01 - HTML"> <i class="fa fa-chevron-left"></i></a>
+<a class="nav nav-next" href=/tw/proiecte/ title=Proiecte style=margin-right:0><i class="fa fa-chevron-right"></i></a>
 </div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
 <div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646345836></script>
 <script src=/tw/js/perfect-scrollbar.min.js?1646345836></script>
