--- a/laboratoare/index.html
+++ b/laboratoare/index.html
@@ -6,7 +6,7 @@
 <meta name=description content="TW">
 <meta name=author content="Micu Matei-Marius">
 <link rel=icon href=/tw/images/favicon.png type=image/png>
-<title>Tags :: TW</title><link href=/tw/css/nucleus.css?1646345836 rel=stylesheet>
+<title>Laboratoare :: TW</title><link href=/tw/css/nucleus.css?1646345836 rel=stylesheet>
 <link href=/tw/css/fontawesome-all.min.css?1646345836 rel=stylesheet>
 <link href=/tw/css/hybrid.css?1646345836 rel=stylesheet>
 <link href=/tw/css/featherlight.min.css?1646345836 rel=stylesheet>
@@ -18,7 +18,7 @@
 <link href=/tw/css/hugo-theme.css?1646345836 rel=stylesheet>
 <link href=/tw/css/theme-blue.css?1646345836 rel=stylesheet>
 <script src=/tw/js/jquery-3.3.1.min.js?1646345836></script>
-<style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/tags/>
+<style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/>
 <nav id=sidebar class=showVisitedLinks>
 <div id=header-wrapper>
 <div id=header>
@@ -39,7 +39,9 @@ Tehnologii Web
 <a class=padding href=/><i class="fas fa-home"></i> Home</a>
 </li></ul></section><div class=highlightable>
 <ul class=topics>
-<li data-nav-id=/tw/laboratoare/ title=Laboratoare class=dd-item>
+<li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
+parent
+active">
 <a href=/tw/laboratoare/>
 Laboratoare
 <i class="fas fa-check read-icon"></i>
@@ -74,27 +76,27 @@ Lista Proiecte
 <div id=overlay></div><div class="padding highlightable">
 <div>
 <div id=top-bar>
-<div id=breadcrumbs itemscope itemtype=http://data-vocabulary.org/Breadcrumb>
+<div id=top-github-link>
+<a class=github-link title="Edit this page" href=https://github.com/mateimicu/tw/content/laboratoare/_index.md target=blank>
+<i class="fas fa-code-branch"></i>
+<span id=top-github-link-text>Edit this page</span>
+</a>
+</div><div id=breadcrumbs itemscope itemtype=http://data-vocabulary.org/Breadcrumb>
 <span id=sidebar-toggle-span>
 <a href=# id=sidebar-toggle data-sidebar-toggle>
 <i class="fas fa-bars"></i>
 </a>
 </span>
-<span id=toc-menu><i class="fas fa-list-alt"></i></span>
 <span class=links>
-<a href=/tw/></a> > Tags
+<a href=/tw/></a> > Laboratoare
 </span>
-</div><div class=progress>
-<div class=wrapper>
-</div></div></div></div><div id=head-tags>
-</div><div id=body-inner>
-<h1>
-tag ::
-Tags
-</h1><ul>
-</ul><footer class=footline>
-</footer></div></div><div id=navigation>
-<a class="nav nav-next" href=/tw/laboratoare/ title=Laboratoare style=margin-right:0><i class="fa fa-chevron-right"></i></a>
+</div></div></div><div id=head-tags>
+</div><div id=chapter>
+<div id=body-inner>
+<h3 id=laboratoare>Laboratoare</h3><footer class=footline>
+</footer></div></div></div><div id=navigation>
+<a class="nav nav-prev" href=/tw/ title> <i class="fa fa-chevron-left"></i></a>
+<a class="nav nav-next" href=/tw/laboratoare/01-html/ title="01 - HTML" style=margin-right:0><i class="fa fa-chevron-right"></i></a>
 </div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
 <div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646345836></script>
 <script src=/tw/js/perfect-scrollbar.min.js?1646345836></script>
