--- a/proiecte/index.html
+++ b/proiecte/index.html
@@ -6,18 +6,18 @@
 <meta name=description content="TW">
 <meta name=author content="Micu Matei-Marius">
 <link rel=icon href=/tw/images/favicon.png type=image/png>
-<title>Proiecte :: TW</title><link href=/tw/css/nucleus.css?1646345836 rel=stylesheet>
-<link href=/tw/css/fontawesome-all.min.css?1646345836 rel=stylesheet>
-<link href=/tw/css/hybrid.css?1646345836 rel=stylesheet>
-<link href=/tw/css/featherlight.min.css?1646345836 rel=stylesheet>
-<link href=/tw/css/perfect-scrollbar.min.css?1646345836 rel=stylesheet>
-<link href=/tw/css/auto-complete.css?1646345836 rel=stylesheet>
-<link href=/tw/css/atom-one-dark-reasonable.css?1646345836 rel=stylesheet>
-<link href=/tw/css/theme.css?1646345836 rel=stylesheet>
-<link href=/tw/css/tabs.css?1646345836 rel=stylesheet>
-<link href=/tw/css/hugo-theme.css?1646345836 rel=stylesheet>
-<link href=/tw/css/theme-blue.css?1646345836 rel=stylesheet>
-<script src=/tw/js/jquery-3.3.1.min.js?1646345836></script>
+<title>Proiecte :: TW</title><link href=/tw/css/nucleus.css?1646346029 rel=stylesheet>
+<link href=/tw/css/fontawesome-all.min.css?1646346029 rel=stylesheet>
+<link href=/tw/css/hybrid.css?1646346029 rel=stylesheet>
+<link href=/tw/css/featherlight.min.css?1646346029 rel=stylesheet>
+<link href=/tw/css/perfect-scrollbar.min.css?1646346029 rel=stylesheet>
+<link href=/tw/css/auto-complete.css?1646346029 rel=stylesheet>
+<link href=/tw/css/atom-one-dark-reasonable.css?1646346029 rel=stylesheet>
+<link href=/tw/css/theme.css?1646346029 rel=stylesheet>
+<link href=/tw/css/tabs.css?1646346029 rel=stylesheet>
+<link href=/tw/css/hugo-theme.css?1646346029 rel=stylesheet>
+<link href=/tw/css/theme-blue.css?1646346029 rel=stylesheet>
+<script src=/tw/js/jquery-3.3.1.min.js?1646346029></script>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/proiecte/>
 <nav id=sidebar class=showVisitedLinks>
 <div id=header-wrapper>
@@ -29,10 +29,10 @@ Tehnologii Web
 <label for=search-by><i class="fas fa-search"></i></label>
 <input data-search-input id=search-by type=search placeholder=Search...>
 <span data-search-clear><i class="fas fa-times"></i></span>
-</div><script type=text/javascript src=/tw/js/lunr.min.js?1646345836></script>
-<script type=text/javascript src=/tw/js/auto-complete.js?1646345836></script>
+</div><script type=text/javascript src=/tw/js/lunr.min.js?1646346029></script>
+<script type=text/javascript src=/tw/js/auto-complete.js?1646346029></script>
 <script type=text/javascript>var baseurl="https://mateimicu.github.io/tw/"</script>
-<script type=text/javascript src=/tw/js/search.js?1646345836></script>
+<script type=text/javascript src=/tw/js/search.js?1646346029></script>
 </div><section id=homelinks>
 <ul>
 <li>
@@ -48,11 +48,6 @@ Laboratoare
 <li data-nav-id=/tw/laboratoare/01-html/ title="01 - HTML" class=dd-item>
 <a href=/tw/laboratoare/01-html/>
 01 - HTML
-<i class="fas fa-check read-icon"></i>
-</a>
-</li><li data-nav-id=/tw/laboratoare/aux-01-html/ title="a01 - HTML" class=dd-item>
-<a href=/tw/laboratoare/aux-01-html/>
-a01 - HTML
 <i class="fas fa-check read-icon"></i>
 </a>
 </li></ul></li><li data-nav-id=/tw/proiecte/ title=Proiecte class="dd-item
@@ -77,7 +72,7 @@ Lista Proiecte
 <div>
 <div id=top-bar>
 <div id=top-github-link>
-<a class=github-link title="Edit this page" href=https://github.com/mateimicu/tw/content/proiecte/_index.md target=blank>
+<a class=github-link title="Edit this page" href=https://github.com/mateimicu/tw/tree/main/contentproiecte/_index.md target=blank>
 <i class="fas fa-code-branch"></i>
 <span id=top-github-link-text>Edit this page</span>
 </a>
@@ -95,19 +90,19 @@ Lista Proiecte
 <div id=body-inner>
 <h3 id=proiecte>Proiecte</h3><footer class=footline>
 </footer></div></div></div><div id=navigation>
-<a class="nav nav-prev" href=/tw/laboratoare/aux-01-html/ title="a01 - HTML"> <i class="fa fa-chevron-left"></i></a>
+<a class="nav nav-prev" href=/tw/laboratoare/01-html/ title="01 - HTML"> <i class="fa fa-chevron-left"></i></a>
 <a class="nav nav-next" href=/tw/proiecte/lista-proiecte/ title="Lista Proiecte" style=margin-right:0><i class="fa fa-chevron-right"></i></a>
 </div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
-<div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646345836></script>
-<script src=/tw/js/perfect-scrollbar.min.js?1646345836></script>
-<script src=/tw/js/perfect-scrollbar.jquery.min.js?1646345836></script>
-<script src=/tw/js/jquery.sticky.js?1646345836></script>
-<script src=/tw/js/featherlight.min.js?1646345836></script>
-<script src=/tw/js/highlight.pack.js?1646345836></script>
+<div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646346029></script>
+<script src=/tw/js/perfect-scrollbar.min.js?1646346029></script>
+<script src=/tw/js/perfect-scrollbar.jquery.min.js?1646346029></script>
+<script src=/tw/js/jquery.sticky.js?1646346029></script>
+<script src=/tw/js/featherlight.min.js?1646346029></script>
+<script src=/tw/js/highlight.pack.js?1646346029></script>
 <script>hljs.initHighlightingOnLoad()</script>
-<script src=/tw/js/modernizr.custom-3.6.0.js?1646345836></script>
-<script src=/tw/js/learn.js?1646345836></script>
-<script src=/tw/js/hugo-learn.js?1646345836></script>
-<script src=/tw/mermaid/mermaid.js?1646345836></script>
+<script src=/tw/js/modernizr.custom-3.6.0.js?1646346029></script>
+<script src=/tw/js/learn.js?1646346029></script>
+<script src=/tw/js/hugo-learn.js?1646346029></script>
+<script src=/tw/mermaid/mermaid.js?1646346029></script>
 <script>mermaid.initialize({startOnLoad:!0})</script>
 </body></html>
