--- a/laboratoare/02_css/index.html
+++ b/laboratoare/02_css/index.html
@@ -6,7 +6,7 @@
 <meta name=description content="TW">
 <meta name=author content="Micu Matei-Marius">
 <link rel=icon href=/tw/images/favicon.png type=image/png>
-<title>Tags :: TW</title><link href=/tw/css/nucleus.css?1646350478 rel=stylesheet>
+<title>02 - CSS :: TW</title><link href=/tw/css/nucleus.css?1646350478 rel=stylesheet>
 <link href=/tw/css/fontawesome-all.min.css?1646350478 rel=stylesheet>
 <link href=/tw/css/hybrid.css?1646350478 rel=stylesheet>
 <link href=/tw/css/featherlight.min.css?1646350478 rel=stylesheet>
@@ -18,7 +18,7 @@
 <link href=/tw/css/hugo-theme.css?1646350478 rel=stylesheet>
 <link href=/tw/css/theme-blue.css?1646350478 rel=stylesheet>
 <script src=/tw/js/jquery-3.3.1.min.js?1646350478></script>
-<style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/tags/>
+<style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/02_css/>
 <nav id=sidebar class=showVisitedLinks>
 <div id=header-wrapper>
 <div id=header>
@@ -39,7 +39,8 @@ Tehnologii Web
 <a class=padding href=/><i class="fas fa-home"></i> Home</a>
 </li></ul></section><div class=highlightable>
 <ul class=topics>
-<li data-nav-id=/tw/laboratoare/ title=Laboratoare class=dd-item>
+<li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
+parent">
 <a href=/tw/laboratoare/>
 Laboratoare
 <i class="fas fa-check read-icon"></i>
@@ -50,7 +51,9 @@ Laboratoare
 01 - HTML
 <i class="fas fa-check read-icon"></i>
 </a>
-</li><li data-nav-id=/tw/laboratoare/02_css/ title="02 - CSS" class=dd-item>
+</li><li data-nav-id=/tw/laboratoare/02_css/ title="02 - CSS" class="dd-item
+parent
+active">
 <a href=/tw/laboratoare/02_css/>
 02 - CSS
 <i class="fas fa-check read-icon"></i>
@@ -74,7 +77,12 @@ Lista Proiecte
 <div id=overlay></div><div class="padding highlightable">
 <div>
 <div id=top-bar>
-<div id=breadcrumbs itemscope itemtype=http://data-vocabulary.org/Breadcrumb>
+<div id=top-github-link>
+<a class=github-link title="Edit this page" href=https://github.com/mateimicu/tw/tree/main/content/laboratoare/02_css/_index.md target=blank>
+<i class="fas fa-code-branch"></i>
+<span id=top-github-link-text>Edit this page</span>
+</a>
+</div><div id=breadcrumbs itemscope itemtype=http://data-vocabulary.org/Breadcrumb>
 <span id=sidebar-toggle-span>
 <a href=# id=sidebar-toggle data-sidebar-toggle>
 <i class="fas fa-bars"></i>
@@ -82,19 +90,31 @@ Lista Proiecte
 </span>
 <span id=toc-menu><i class="fas fa-list-alt"></i></span>
 <span class=links>
-<a href=/tw/></a> > Tags
+<a href=/tw/></a> > <a href=/tw/laboratoare/>Laboratoare</a> > 02 - CSS
 </span>
 </div><div class=progress>
 <div class=wrapper>
-</div></div></div></div><div id=head-tags>
+<nav id=TableOfContents>
+<ul>
+<li>
+<ul>
+<li><a href=#informatii-utile>Informatii Utile</a></li><li><a href=#exercitii>Exercitii</a></li></ul></li></ul></nav></div></div></div></div><div id=head-tags>
 </div><div id=body-inner>
 <h1>
-tag ::
-Tags
-</h1><ul>
-</ul><footer class=footline>
+02 - CSS
+</h1><p><a href=prezentare_02.pdf>Prezentare Laboratoar</a></p><p><a href=https://profs.info.uaic.ro/~busaco/teach/courses/web/web-film.html#week2>Prezentarea Curs si informatii utile</a></p><p><a href=https://profs.info.uaic.ro/~busaco/teach/labs/css/>Laboratoar CSS</a></p><h3 id=informatii-utile>Informatii Utile</h3><p>Tools:</p><ul>
+<li><a href=https://jsfiddle.net/>JSFiddle</a></li><li><a href=https://code.visualstudio.com/>VisualStudioCode</a></li></ul><p>Documentatie:</p><ul>
+<li><a href=https://www.w3schools.com/css/>W3schools CSS</a></li><li><a href=https://developer.mozilla.org/en-US/docs/Web/CSS>MDN Web Docs CSS</a></li><li><a href=https://adam-marsden.co.uk/css-cheat-sheet>CSS Cheat Sheet</a></li><li><a href=https://www.freecodecamp.org/news/7-important-tips-for-writing-better-css/>7 Important Tips for Writing Better CSS</a></li><li><a href=http://www.csszengarden.com/>CSS Zen Garden</a></li><li><a href=https://devdocs.io/css/>CSS @ DevDocs</a></li></ul><p>Exercitii de antrenament:</p><h3 id=exercitii>Exercitii</h3><p>Replicati urmatoarele imagini folosing HTML si CSS</p><h4 id=1-boxmodel>1. BoxModel</h4><p><img src=01_containere.png alt="Exemplu CSS pentru containere">
+<a href>Rezolvare</a></p><h4 id=2-selectia-elementelor>2. Selectia elementelor</h4><p><img src=02_selectors.png alt="Tabel in HTML">
+<a href>Rezolvare</a></p><h4 id=3-sah>3. Sah</h4><p>Aici puteti tabele sau div-uri pentru rezolvare
+<img src=03_sah.png alt="Tabla de sah"></p><p><a href>Rezolvare folosind tabele</a></p><p><a href>Rezolvare folosind div</a></p><h4 id=4-design-responsive>4. Design Responsive</h4><p>Dimensiuni ecran:</p><ul>
+<li><code>360</code></li><li><code>480</code></li><li><code>760</code></li></ul><p><img src=04_small.png alt="Exemplu responsibe mic">
+<img src=04_mid.png alt="Exemplu responsibe mediu">
+<img src=04_max.png alt="Exemplu responsibe mare">
+<img src=04_responsive.gif alt="Exemplu Gif"></p><p><a href>Rezolvare</a></p><footer class=footline>
 </footer></div></div><div id=navigation>
-<a class="nav nav-next" href=/tw/laboratoare/ title=Laboratoare style=margin-right:0><i class="fa fa-chevron-right"></i></a>
+<a class="nav nav-prev" href=/tw/laboratoare/01-html/ title="01 - HTML"> <i class="fa fa-chevron-left"></i></a>
+<a class="nav nav-next" href=/tw/proiecte/ title=Proiecte style=margin-right:0><i class="fa fa-chevron-right"></i></a>
 </div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
 <div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646350478></script>
 <script src=/tw/js/perfect-scrollbar.min.js?1646350478></script>
