--- a/proiecte/lista-proiecte/index.html
+++ b/proiecte/lista-proiecte/index.html
@@ -6,18 +6,18 @@
 <meta name=description content="TW">
 <meta name=author content="Micu Matei-Marius">
 <link rel=icon href=/tw/images/favicon.png type=image/png>
-<title>Lista Proiecte :: TW</title><link href=/tw/css/nucleus.css?1646351153 rel=stylesheet>
-<link href=/tw/css/fontawesome-all.min.css?1646351153 rel=stylesheet>
-<link href=/tw/css/hybrid.css?1646351153 rel=stylesheet>
-<link href=/tw/css/featherlight.min.css?1646351153 rel=stylesheet>
-<link href=/tw/css/perfect-scrollbar.min.css?1646351153 rel=stylesheet>
-<link href=/tw/css/auto-complete.css?1646351153 rel=stylesheet>
-<link href=/tw/css/atom-one-dark-reasonable.css?1646351153 rel=stylesheet>
-<link href=/tw/css/theme.css?1646351153 rel=stylesheet>
-<link href=/tw/css/tabs.css?1646351153 rel=stylesheet>
-<link href=/tw/css/hugo-theme.css?1646351153 rel=stylesheet>
-<link href=/tw/css/theme-blue.css?1646351153 rel=stylesheet>
-<script src=/tw/js/jquery-3.3.1.min.js?1646351153></script>
+<title>Lista Proiecte :: TW</title><link href=/tw/css/nucleus.css?1646351564 rel=stylesheet>
+<link href=/tw/css/fontawesome-all.min.css?1646351564 rel=stylesheet>
+<link href=/tw/css/hybrid.css?1646351564 rel=stylesheet>
+<link href=/tw/css/featherlight.min.css?1646351564 rel=stylesheet>
+<link href=/tw/css/perfect-scrollbar.min.css?1646351564 rel=stylesheet>
+<link href=/tw/css/auto-complete.css?1646351564 rel=stylesheet>
+<link href=/tw/css/atom-one-dark-reasonable.css?1646351564 rel=stylesheet>
+<link href=/tw/css/theme.css?1646351564 rel=stylesheet>
+<link href=/tw/css/tabs.css?1646351564 rel=stylesheet>
+<link href=/tw/css/hugo-theme.css?1646351564 rel=stylesheet>
+<link href=/tw/css/theme-blue.css?1646351564 rel=stylesheet>
+<script src=/tw/js/jquery-3.3.1.min.js?1646351564></script>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/proiecte/lista-proiecte/>
 <nav id=sidebar class=showVisitedLinks>
 <div id=header-wrapper>
@@ -29,15 +29,11 @@ Tehnologii Web
 <label for=search-by><i class="fas fa-search"></i></label>
 <input data-search-input id=search-by type=search placeholder=Search...>
 <span data-search-clear><i class="fas fa-times"></i></span>
-</div><script type=text/javascript src=/tw/js/lunr.min.js?1646351153></script>
-<script type=text/javascript src=/tw/js/auto-complete.js?1646351153></script>
+</div><script type=text/javascript src=/tw/js/lunr.min.js?1646351564></script>
+<script type=text/javascript src=/tw/js/auto-complete.js?1646351564></script>
 <script type=text/javascript>var baseurl="https://mateimicu.github.io/tw/"</script>
-<script type=text/javascript src=/tw/js/search.js?1646351153></script>
-</div><section id=homelinks>
-<ul>
-<li>
-<a class=padding href=/><i class="fas fa-home"></i> Home</a>
-</li></ul></section><div class=highlightable>
+<script type=text/javascript src=/tw/js/search.js?1646351564></script>
+</div><div class=highlightable>
 <ul class=topics>
 <li data-nav-id=/tw/laboratoare/ title=Laboratoare class=dd-item>
 <a href=/tw/laboratoare/>
@@ -101,16 +97,16 @@ Lista Proiecte
 <a class="nav nav-prev" href=/tw/proiecte/ title=Proiecte> <i class="fa fa-chevron-left"></i></a>
 <a class="nav nav-next" href=/tw/laboratoare/ title=Laboratoare style=margin-right:0><i class="fa fa-chevron-right"></i></a>
 </div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
-<div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646351153></script>
-<script src=/tw/js/perfect-scrollbar.min.js?1646351153></script>
-<script src=/tw/js/perfect-scrollbar.jquery.min.js?1646351153></script>
-<script src=/tw/js/jquery.sticky.js?1646351153></script>
-<script src=/tw/js/featherlight.min.js?1646351153></script>
-<script src=/tw/js/highlight.pack.js?1646351153></script>
+<div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646351564></script>
+<script src=/tw/js/perfect-scrollbar.min.js?1646351564></script>
+<script src=/tw/js/perfect-scrollbar.jquery.min.js?1646351564></script>
+<script src=/tw/js/jquery.sticky.js?1646351564></script>
+<script src=/tw/js/featherlight.min.js?1646351564></script>
+<script src=/tw/js/highlight.pack.js?1646351564></script>
 <script>hljs.initHighlightingOnLoad()</script>
-<script src=/tw/js/modernizr.custom-3.6.0.js?1646351153></script>
-<script src=/tw/js/learn.js?1646351153></script>
-<script src=/tw/js/hugo-learn.js?1646351153></script>
-<script src=/tw/mermaid/mermaid.js?1646351153></script>
+<script src=/tw/js/modernizr.custom-3.6.0.js?1646351564></script>
+<script src=/tw/js/learn.js?1646351564></script>
+<script src=/tw/js/hugo-learn.js?1646351564></script>
+<script src=/tw/mermaid/mermaid.js?1646351564></script>
 <script>mermaid.initialize({startOnLoad:!0})</script>
 </body></html>
